Add missing err-code details

--- a/sms.yml
+++ b/sms.yml
@@ -270,6 +270,8 @@ components:
           example: 2001011400
         err-code:
           type: string
+          description: The status of the request. Will be a non `0` value if there has been an error. You can see error codes below.
+          example: '0'
         message-timestamp:
           description: The time when Nexmo started to push this Delivery Receipt to your webhook endpoint.
           type: string
