Fix vard -> vcard

--- a/definitions/sms.yml
+++ b/definitions/sms.yml
@@ -157,7 +157,7 @@ components:
             - wappush
             - unicode
             - vcal
-            - vard
+            - vcard
           example: text
           default: text
         vcard:
